fix top overflow

--- a/main.css
+++ b/main.css
@@ -7,7 +7,6 @@
 
 html,
 body,
-div,
 h1 {
   margin: 0;
   padding: 0;
@@ -23,7 +22,6 @@ body {
   font-weight: 400;
   color: #000;
   white-space: nowrap;
-  height: 100dvh;
 }
 
 main {
@@ -31,7 +29,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: 100dvh;
 }
 
 ol,
